terraform-gcp-k8s/k8s/nextcloud/nextcloud-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-mysql
spec:
  selector:
    matchLabels:
      app: nextcloud-mysql
  template:
    metadata:
      labels:
        app: nextcloud-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
