terraform-gcp-k8s/k8s/nextcloud/nextcloud-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-mysql-service
spec:
  selector:
    app: nextcloud-mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
