terraform-gcp-k8s/k8s/nextcloud/nextcloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
spec:
  selector:
    app: nextcloud
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
